--- a/package.json
+++ b/package.json
@@ -21,6 +21,17 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
   "private": true
