--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-standard": "^5.0.0",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
