--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-standard": "^5.0.0",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "typescript": "~4.3.5"
