--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "lerna": "^4.0.0",
+    "typescript": "~4.3.5",
+    "@nrwl/workspace": "latest",
+    "@nrwl/cli": "latest",
+    "@nrwl/tao": "latest",
+    "@nrwl/nx-cloud": "latest"
   },
-  "private": true
+  "private": true,
+  "workspaces": [
+    "workspace-a",
+    "workspace-b"
+  ]
 }
