--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "test": "jest"
   },
   "dependencies": {
